--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-      "module": "ES2020",
+      "module": "ESNEXT",
       "noImplicitAny": true,
       "removeComments": true,
       "preserveConstEnums": true,
       "outDir": "build",
       "sourceMap": true,
+      "target": "ES2020",
       "lib": ["ES2020", "dom"]
     },
     "include": ["interpreter/*"],
