--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,18 +7,18 @@ on:
 jobs:
   build:
     env:
-      CLANG: ./clang+llvm-11.0.0-x86_64-linux-gnu-ubuntu-20.04/bin/clang
+      CLANG: clang
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: gets clang 11
-      run: wget https://github.com/llvm/llvm-project/releases/download/llvmorg-11.0.0/clang+llvm-11.0.0-x86_64-linux-gnu-ubuntu-20.04.tar.xz
-
-    - name: untar
-      run: tar -xf clang+llvm-11.0.0-x86_64-linux-gnu-ubuntu-20.04.tar.xz
+    - name: Set up Clang
+      uses: egor-tensin/setup-clang@v1
+      with:
+        version: latest
+        platform: x64
 
     - name: Install typescript
       run: npx tsc
